<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Cellscope</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_cellscope_launcher">Navigation</string>
    <string name="title_activity_login">Cellscope Login</string>
    <string name="usernameHint">username</string>
    <string name="passwordHint">password</string>
    <string name="loginButtonText">login</string>
    <string name="title_activity_camera">Camera</string>
    <string name="title_activity_photo_gallery">Photo Library</string>
    <string name="title_activity_video_gallery">Video Library</string>
    <string name="title_activity_photo">Photo Viewer</string>
    <string name="title_activity_video">Video Viewer</string>
    <string name="title_activity_bluetooth">Bluetooth</string>
    <string name="title_activity_opencv_camera">OpenCV Camera</string>
    <string name="delete_button">Delete</string>
    <string name="menu_delete_all">Delete All</string>
    <string name="action_settings">Settings</string>
    <string name="motor">Motor</string>
    <string name="xRightMotor">Right</string>
    <string name="xLeftMotor">Left</string>
    <string name="zUpMotor">Up</string>
    <string name="zDownMotor">Down</string>
    <string name="yBackMotor">Back</string>
    <string name="yForwardMotor">Forward</string>

    <!-- The remaining Strings are from the BlueTerm strings.xml reference values) -->
    <string name="alert_dialog_no_bt">Cannot use this application without bluetooth.</string>
    <string name="alert_dialog_yes">Yes</string>
    <string name="alert_dialog_no">No</string>
    <string name="alert_dialog_warning_title">Warning</string>
    <string name="alert_dialog_ok">Ok</string>
    <string name="alert_dialog_turn_on_bt">This application needs the Bluetooth. Do you want turn on?</string>
    <string name="not_connected">You are not connected to a device</string>
    <string name="title_connecting">connecting...</string>
    <string name="title_connected_to">connected: </string>
    <string name="title_not_connected">not connected</string>

    <!-- DeviceListActivity -->
    <string name="scanning">scanning for devices...</string>
    <string name="select_device">select a device to connect</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for devices</string>

    <!-- Options Menu -->
    <string name="connect">Connect device</string>
    <string name="autofocus">Autofocus</string>
    <string name="track_pan_enable">Enable pan tracking</string>
    <string name="track_pan_disable">Disable pan tracking</string>
    <string name="pinch_control">Pinch controls</string>
    <string name="pinch_zoom">Zoom</string>
    <string name="pinch_exposure">Exposure</string>
    <string name="cell_select_filter">1. Filter</string>

    <!-- Camre Preview Info -->
    <string name="zoom_label">Zoom: </string>
    <string name="exposure_label">Exposure: </string>
    <string name="calibrate">Calibrate stage</string>
    <string name="disconnect">Disconnect device</string>
    <string name="preferences">Preferences</string>
    <string name="special_keys">Special keys</string>

    <!-- Preference dialog -->
    <string name="general_preferences">General</string>
    <string name="title_localhecho_preference">Local echo</string>
    <string name="summary_localecho_preference">Display the key strokes</string>
    <string name="text_preferences">Text</string>
    <string name="title_fontsize_preference">Font size</string>
    <string name="summary_fontsize_preference">Choose character height in points.</string>
    <string name="dialog_title_fontsize_preference">Font size</string>
    <string name="title_color_preference">Colors</string>
    <string name="summary_color_preference">Choose text color.</string>
    <string name="dialog_title_color_preference">Text color</string>
    <string name="keyboard_preferences">Keyboard</string>
    <string name="title_controlkey_preference">Control key</string>
    <string name="summary_controlkey_preference">Choose control key.</string>
    <string name="dialog_title_controlkey_preference">Control key</string>
    <string name="title_document_key_press">Press</string>
    <string name="title_document_key_rest">and Key</string>

    <!-- Don't localize these default values -->
    <string name="default_value_localecho_preference">false</string>
    <string name="default_value_fontsize_preference">10</string>
    <string name="default_value_color_preference">2</string>
    <string name="default_value_controlkey_preference">0</string>
    <string name="title_activity_device_list">DeviceListActivity</string>
    <string name="title_activity_open_cvcamera">OpenCVCameraActivity</string>
    <string name="title_activity_pan_track">PanTrack</string>
    <string name="title_activity_pinch_control_selection">PinchControlSelection</string>
    <string name="title_activity_pinch_select">PinchSelectActivity</string>
    <string name="title_activity_initial_camera">InitialCameraActivity</string>
    <string name="title_activity_cell_detect">Cell Detection</string>
    <string name="title_activity_viewfield">Field of View</string>
    <string name="title_activity_tracker_settings">Cell Tracking Options</string>

</resources>