<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <Button
        android:id="@+id/button_camera"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_activity_camera" 
        android:onClick="goToCamera"/>
    
    <Button
        android:id="@+id/button_photolib"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_activity_photo"
        android:onClick="goToPhotoLibrary"/>
    
    <Button
        android:id="@+id/button_videolib"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_activity_video"
        android:onClick="goToVideoLibrary"/>
<!-- 
    <Button
        android:id="@+id/button_bluetooth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_activity_bluetooth"
        android:onClick="goToBluetooth"/>
 -->    
    <Button
        android:id="@+id/button_opencv_camera"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_activity_opencv_camera"
        android:onClick="goToOpenCVCamera"/>
    
    <Button
        android:id="@+id/button_pan_track"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Pan Track"
        android:onClick="goToPanTrack"/>
    
    
    <Button
        android:id="@+id/button_track_cam"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="TrackCam"
        android:onClick="goToTrackCam"/>
    

</LinearLayout>
