<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2009 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
 >


    <TextView
        android:id="@+id/status_indicator"
        android:layout_width="fill_parent"
        android:hint="This is a status indicator"
        android:layout_gravity="center|top"
        android:layout_height="20dp" />
    

    <!-- This horzontal layout will be where all the buttons are stored -->
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="bottom"
        >
        
        
        <!-- This vertical layout holds the z buttons -->
        <LinearLayout 
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >
            <Button
     			android:id="@+id/zUpMotorButton" 
     			android:layout_width="match_parent"
     			android:layout_weight="1"
     			android:layout_height="0dp"
     			android:text="@string/zUpMotor"  />
            <Button
     			android:id="@+id/zDownMotorButton" 
     			android:layout_width="match_parent"
     			android:layout_weight="1"
     			android:layout_height="0dp"
     			android:text="@string/zDownMotor"  />
            
        </LinearLayout>
        
        <!-- This vertical layout holds the x and y direction buttons -->
        <LinearLayout 
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical"
         >
            
            <!-- This is the Y-Back Motor Button -->
            <Button
                android:id="@+id/yBackMotorButton"
                android:layout_width="match_parent"
    			android:layout_height="wrap_content"
    			android:layout_weight="1"
    			android:text="@string/yBackMotor"/>
            
            
            <!-- This horizontal layout holds the x direction buttons -->
            <LinearLayout 
    			android:layout_width="match_parent"
    			android:layout_height="wrap_content"
    			android:layout_weight="1"
    			android:orientation="horizontal" >
        		<!-- This is the x-Left Motor Button -->
        		<Button
     				android:id="@+id/xLeftMotorButton" 
     				android:layout_width="0dp"
     				android:layout_weight="1"
     				android:layout_height="wrap_content"
     				android:text="@string/xLeftMotor" 
     			/>
  	  			<!-- This is the x-Right Motor Button -->
  	  			<Button
        			android:id="@+id/xRightMotorButton"
        			android:layout_width="0dp"
        			android:layout_weight="1"
       				android:layout_height="wrap_content"
        			android:text="@string/xRightMotor" />
        		</LinearLayout>
            <!-- This is the Y-Back Motor Button -->
            <Button
                android:id="@+id/yForwardMotorButton"
                android:layout_width="match_parent"
    			android:layout_height="wrap_content"
    			android:layout_weight="1"
    			android:text="@string/yForwardMotor"/>
        </LinearLayout>

    </LinearLayout>

</FrameLayout>